--- a/requirements.txt
+++ b/requirements.txt
@@ -43,8 +43,10 @@ jupyter_core==5.3.1
 langchain==0.0.306
 langsmith==0.0.41
 loguru==0.7.2
+markdown-it-py==3.0.0
 marshmallow==3.20.1
 matplotlib-inline==0.1.6
+mdurl==0.1.2
 multidict==6.0.4
 mypy-extensions==1.0.0
 nest-asyncio==1.5.8
@@ -77,6 +79,7 @@ PyYAML==6.0.1
 pyzmq==25.1.1
 realtime==1.0.0
 requests==2.31.0
+rich==13.7.0
 six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.21
