--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ azure-search-documents==11.4.0b9
 backcall==0.2.0
 certifi==2023.7.22
 charset-normalizer==3.2.0
+click==8.1.7
 colorama==0.4.6
 comm==0.1.4
 dataclasses-json==0.6.1
@@ -92,6 +93,7 @@ tenacity==8.2.3
 tornado==6.3.3
 tqdm==4.66.1
 traitlets==5.10.0
+typer==0.9.0
 types-pytz==2023.3.0.1
 typing-inspect==0.9.0
 typing_extensions==4.8.0
