--- a/requirements.txt
+++ b/requirements.txt
@@ -130,3 +130,138 @@ websockets==10.4
 win32-setctime==1.1.0
 yarl==1.9.2
 zipp==3.17.0
+aiohttp==3.8.5
+aiosignal==1.3.1
+annotated-types==0.5.0
+anyio==3.7.1
+appnope==0.1.3
+asttokens==2.4.0
+async-timeout==4.0.3
+attrs==23.1.0
+azure-common==1.1.28
+azure-core==1.29.4
+azure-search-documents==11.4.0b9
+backcall==0.2.0
+build==1.0.3
+CacheControl==0.13.1
+certifi==2023.7.22
+charset-normalizer==3.2.0
+cleo==2.1.0
+click==8.1.7
+colorama==0.4.6
+comm==0.1.4
+crashtest==0.4.1
+dataclasses-json==0.6.1
+debugpy==1.8.0
+decorator==5.1.1
+deprecation==2.1.0
+distlib==0.3.8
+dnspython==2.4.2
+docx2txt==0.8
+dulwich==0.21.7
+et-xmlfile==1.1.0
+exceptiongroup==1.1.3
+executing==1.2.0
+faiss-cpu==1.7.4
+fastjsonschema==2.19.0
+filelock==3.13.1
+-e git+ssh://git@github.com/Fridaplatform/Frida-CLI.git@12f9a7bd00eefc6f9d20cc53b9dfd8800d827b10#egg=fridacli
+frozenlist==1.4.0
+gotrue==1.1.1
+greenlet==3.0.0
+h11==0.14.0
+httpcore==0.17.3
+httpx==0.24.1
+idna==3.4
+importlib-metadata==7.0.0
+innovation-stk @ git+https://github.com/Fridaplatform/SofttekLLMSDK.git@1542f95f7b08d85d59d1669983e56ad05d3dddd9
+inquirerpy==0.3.4
+installer==0.7.0
+ipykernel==6.25.2
+ipython==8.15.0
+isodate==0.6.1
+jaraco.classes==3.3.0
+jedi==0.19.0
+jsonpatch==1.33
+jsonpointer==2.4
+jupyter_client==8.3.1
+jupyter_core==5.3.1
+keyring==24.3.0
+langchain==0.0.306
+langsmith==0.0.41
+loguru==0.7.2
+markdown-it-py==3.0.0
+marshmallow==3.20.1
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+more-itertools==10.1.0
+msgpack==1.0.7
+multidict==6.0.4
+mypy-extensions==1.0.0
+nest-asyncio==1.5.8
+numexpr==2.8.7
+numpy==1.25.2
+openai==0.28.0
+openpyxl==3.1.2
+packaging==23.1
+pandas==2.1.0
+pandas-stubs==2.0.3.230814
+parso==0.8.3
+pexpect==4.8.0
+pfzy==0.3.4
+pickleshare==0.7.5
+pinecone-client==2.2.4
+pkginfo==1.9.6
+platformdirs==3.10.0
+poetry==1.7.1
+poetry-core==1.8.1
+poetry-plugin-export==1.6.0
+postgrest==0.11.0
+prompt-toolkit==3.0.39
+psutil==5.9.5
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pydantic==2.3.0
+pydantic_core==2.6.3
+Pygments==2.16.1
+pypdf==3.16.2
+pyproject_hooks==1.0.0
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+pytz==2023.3.post1
+pywin32==306
+pywin32-ctypes==0.2.2
+PyYAML==6.0.1
+pyzmq==25.1.1
+rapidfuzz==3.5.2
+realtime==1.0.0
+requests==2.31.0
+requests-toolbelt==1.0.0
+rich==13.7.0
+shellingham==1.5.4
+six==1.16.0
+sniffio==1.3.0
+SQLAlchemy==2.0.21
+stack-data==0.6.2
+storage3==0.6.1
+StrEnum==0.4.15
+supabase==1.1.1
+supafunc==0.2.3
+tenacity==8.2.3
+tomlkit==0.12.3
+tornado==6.3.3
+tqdm==4.66.1
+traitlets==5.10.0
+trove-classifiers==2023.11.29
+typer==0.9.0
+types-pytz==2023.3.0.1
+typing-inspect==0.9.0
+typing_extensions==4.8.0
+tzdata==2023.3
+urllib3==2.0.4
+virtualenv==20.25.0
+wcwidth==0.2.6
+websockets==10.4
+win32-setctime==1.1.0
+yarl==1.9.2
+zipp==3.17.0
