--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ python = "^3.10"
 innovation-stk = { git = "https://github.com/Fridaplatform/SofttekLLMSDK.git", rev = "1542f95f7b08d85d59d1669983e56ad05d3dddd9" }
 typer = { extras = ["all"], version = "^0.9.0" }
 inquirerpy = "^0.3.4"
+textdistance = "^4.6.1"
 
 [build-system]
 requires = ["poetry-core"]
